sort.pancake.GatesPancake.scala.error
Compilation error:
GatesPancake:2: error: '(' expected but identifier found.
  if isSelected(){
     ^GatesPancake:22: error: illegal start of simple expression
}
^